Fixed overflow

--- a/src/Components/Author/CSS/Author.scss
+++ b/src/Components/Author/CSS/Author.scss
@@ -31,6 +31,7 @@
   .authorskel {
     @include gridAuthor;
     position: relative;
+    overflow: hidden;
     margin-top: 10px;
     padding: 10px;
     border-radius: 10px;
